fix: Widget background and align widget left

--- a/scss/widget.scss
+++ b/scss/widget.scss
@@ -1,5 +1,9 @@
 .coinmarketcap-currency-widget {
     @extend .bg-gradient-3;
+
+}
+
+.coinmarketcap-currency-widget {
     padding: 0;
 
 }
